--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "animate.css": "^4.1.0",
     "history": "^5.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-animated-css-onscroll": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-image-zoom": "^1.3.1",
     "react-router": "^6.0.0-beta.0",
